k8s/app/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: local-mogile-ingress-gateway
  namespace: local-mobile
spec:
  rules:
    - host: local.mobile.dev
      http:
        paths:
          - path: /locomoco-song
            backend:
              serviceName: locomoco-song-service
              servicePort: 8080
          - path: /locomoco-dance
            backend:
              serviceName: locomoco-dance-service
              servicePort: 8080
